Add host to seeApart

--- a/RupBNB/Pages/invoice.html
+++ b/RupBNB/Pages/invoice.html
@@ -54,7 +54,7 @@
 
         </div>
         <!-- begin invoice-price -->
-        <div class="invoice-price">
+        <div class="invoice-price mt-2">
             <div class="invoice-price-left">
                 <div class="invoice-price-row">
                     <div class="sub-price">
