update reservation controller

--- a/RupBNB/Pages/invoice.html
+++ b/RupBNB/Pages/invoice.html
@@ -40,8 +40,8 @@
         <div id="apartmentDetails" class="row m-auto mt-1 mt-md-1">
             <div class="col-12 col-md-7">
                 <div class="card mb-3">
-                    <h5 id="name" class="card-title"></h5>
-                    <img id="image" src="" class="card-img-top" alt="...">
+                    <h5 id="name" class="card-title mt-3"></h5>
+                    <img id="image" src="" class="card-img-top mt-2" alt="...">
 
                 </div>
             </div>
@@ -58,7 +58,7 @@
             <div class="invoice-price-left">
                 <div class="invoice-price-row">
                     <div class="sub-price">
-                        <small>PRICE</small>
+                        <small style="text-align:center">PRICE</small>
                         <span class="text-inverse" id="price"></span>
                     </div>
                     <div class="sub-price">
@@ -75,8 +75,8 @@
             </div>
         </div>
         <!-- end invoice-price -->
-
-        <div id="moreDetails" class="row m-auto mt-2">
+        <hr>
+        <div id="moreDetails" class="row m-auto mt-3">
             <div class="col">
                 <h5>Health & safety</h5>
                 <p>Airbnb's COVID-19 safety practices apply</p>
@@ -89,7 +89,7 @@
                 <p>Review the Host’s full cancellation policy which applies even if you cancel for illness or disruptions caused by COVID-19.</p>
 
             </div>
-            <div class="col"></div>
+            <!--<div class="col"></div>-->
         </div>
 
 
