--- a/RupBNB/Pages/invoice.html
+++ b/RupBNB/Pages/invoice.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>See RupBNB</title>
+    <title>AirBNB</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -15,12 +15,13 @@
 
     <link rel="stylesheet" href="../CSS/main.css">
     <link rel="stylesheet" href="../CSS/header.css">
-    <script src="../Scripts/header.js"></script>
-
-    <!-- This Page Start Here -->
     <link rel="stylesheet" href="../CSS/seeApart.css">
+    <link rel="stylesheet" href="../CSS/spinner.css">
+    <link rel="stylesheet" href="../CSS/invoice.css">
+
+
+    <script src="../Scripts/header.js"></script>
     <script src="../Scripts/invoice.js"></script>
-    <link href="../CSS/invoice.css" rel="stylesheet" />
     <script src="../Scripts/ajaxCalls.js"></script>
 </head>
 <body>
@@ -41,6 +42,7 @@
             <div class="col-12 col-md-7">
                 <div class="card mb-3">
                     <h5 id="name" class="card-title mt-3"></h5>
+                    <a id="apartmentView" href="#"></a>
                     <img id="image" src="" class="card-img-top mt-2" alt="...">
 
                 </div>
@@ -89,9 +91,13 @@
                 <p>Review the Host’s full cancellation policy which applies even if you cancel for illness or disruptions caused by COVID-19.</p>
 
             </div>
-            <!--<div class="col"></div>-->
         </div>
 
+        <div id="spinner" class="text-center">
+            <div class="spinner spinner-border">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
 
     </div>
 
