--- a/RupBNB/Pages/adminView.html
+++ b/RupBNB/Pages/adminView.html
@@ -121,7 +121,7 @@
                                         <div class="row">
                                             <div id="activeUserChatDetails" class="col-lg-6 hide">
                                                 <a href="javascript:void(0);" data-toggle="modal" data-target="#view_info">
-                                                    <img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="avatar">
+                                                    <img src="../images/user-avatar.png" alt="avatar">
                                                 </a>
                                                 <div class="chat-about">
                                                     <h6 id="activeUserChat" class="m-b-0">Aiden Chavez</h6>
