seeApart update reviews

--- a/RupBNB/Pages/seeApart.html
+++ b/RupBNB/Pages/seeApart.html
@@ -72,7 +72,7 @@
                 <div id="map"></div>
             </div>
             <hr class="mt-3">
-            <div class="col-12 mb-5">
+            <div id="reviewDiv" class="col-12 mb-5">
                 <div class="d-flex">
                     <i id="scoreIconForReviewSection" class="fa-solid fa-star"></i>
                     <h5 id="numReviews"></h5>
