Upload Reviews, fix design

--- a/RupBNB/Pages/index.html
+++ b/RupBNB/Pages/index.html
@@ -88,7 +88,7 @@
                     </select>
                 </div>
                 <div class="col d-flex align-items-end">
-                    <input type="button" onclick="search()" class="btn btn-primary bottom" value="Search" />
+                    <button onclick="search()" class="btn btn-primary bottom">Search&nbsp<i class="fa-brands fa-searchengin"></i></i></button>
                 </div>
             </div>
         </div>
