--- a/RupBNB/Pages/seeApart.html
+++ b/RupBNB/Pages/seeApart.html
@@ -77,8 +77,8 @@
                     <i id="scoreIconForReviewSection" class="fa-solid fa-star"></i>
                     <h5 id="numReviews"></h5>
                     <div id="reviewPreviousNext" class="pager">
-                        <button id="previousBTN" onclick="changeDisplayedReviews('-')"><i class="fa-solid fa-arrow-left"></i></button>
-                        <button id="nextBTN" onclick="changeDisplayedReviews('+')"><i class="fa-solid fa-arrow-right"></i></button>
+                        <button id="previousBTN" class="reviewsbuttons" onclick="changeDisplayedReviews('-')"><i class="fa-solid fa-arrow-left"></i></button>
+                        <button id="nextBTN" class="reviewsbuttons" onclick="changeDisplayedReviews('+')"><i class="fa-solid fa-arrow-right"></i></button>
                     </div>
                 </div>
                 <div id="reviews" class="row row-cols-1 row-cols-md-2 mt-3"></div>
