--- a/RupBNB/Pages/profilePage.html
+++ b/RupBNB/Pages/profilePage.html
@@ -67,6 +67,31 @@
                             <div id="pastReservationsContainer" class="row row-cols-1 row-cols-md-3">
 
                             </div>
+                            <div class="modal fade" id="reviewModal" tabindex="-1" role="dialog" aria-labelledby="reviewModal" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">New comment</h5>
+                                            <button type="button" data-bs-dismiss="modal" class="close" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <form>
+  
+                                                <div class="form-group">
+                                                    <label for="message-text" class="col-form-label">Message:</label>
+                                                    <textarea rows="6" class="form-control" id="reviewText"></textarea>
+                                                </div>
+                                            </form>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                            <button type="button" id="addReview" class="btn btn-primary">Send comment</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
 
                         <!--Liked Apartments-->
