search bar chat

--- a/RupBNB/Pages/adminView.html
+++ b/RupBNB/Pages/adminView.html
@@ -110,7 +110,7 @@
                                         <div class="input-group-prepend">
                                             <span class="input-group-text"><i class="fa fa-search"></i></span>
                                         </div>
-                                        <input type="text" class="form-control" placeholder="Search...">
+                                        <input type="text" id="searchText" onkeyup="searchUser()" class="form-control" placeholder="Search...">
                                     </div>
                                     <ul id="usersContainer" class="list-unstyled chat-list mt-2 mb-0">
                                     </ul>
