--- a/RupBNB/Pages/seeApart.html
+++ b/RupBNB/Pages/seeApart.html
@@ -89,7 +89,7 @@
         <div id="reserve" class="fixed-bottom d-flex justify-content-between">
             <div>
                 <p id="price" style="font-size: 1.1rem;"><span style="font-weight: 300;"> night</span></p>
-                <p></p>
+                <p id="minNight" style="font-weight: 300;"></p>
             </div>
             <!-- Button trigger modal -->
             <button id="bookBTN" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#reserveModal">Reserve</button>
