documentation - controllers and models

--- a/RupBNB/Pages/profilePage.html
+++ b/RupBNB/Pages/profilePage.html
@@ -36,14 +36,7 @@
 
         <div class="profileContainer">
             <div id="profileCard" class="card">
-
-                <!--<img src="https://images.unsplash.com/photo-1499557354967-2b2d8910bcca?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=7d5363c18112a02ce22d0c46f8570147&auto=format&fit=crop&w=635&q=80%20635w" alt="profile-pic" class="profilePic">-->
-                <h1 id="username">Bevely Little</h1>
-                <!--<p>SENIOR PRODUCT DESIGNER</p>
-            <div>
-              <p>Create usable interface and designs @GraphicSpark</p>
-            </div>-->
-
+                <h1 id="username"></h1>
                 <hr>
                 <nav>
                     <div class="nav nav-tabs" id="nav-tab" role="tablist">
@@ -122,33 +115,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <!--<div id="orders">
-                    <div class="card m-auto mt-5" style="width: 18rem;">
-                        <img src="https://a0.muscache.com/pictures/10272854/8dcca016_original.jpg" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Appartment Name</h5>
-                            <p class="card-text">26/5/2022 - 30/5/2022</p>
-                            <a href="#" class="btn btn-primary">Cancel</a>
-                        </div>
-                    </div>
-                    <div class="card m-auto mt-5" style="width: 18rem;">
-                        <img src="https://a0.muscache.com/pictures/10272854/8dcca016_original.jpg" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Appartment Name</h5>
-                            <p class="card-text">26/5/2022 - 30/5/2022</p>
-                            <a href="#" class="btn btn-primary">Cancel</a>
-                        </div>
-                    </div>
-                    <div class="card m-auto mt-5" style="width: 18rem;">
-                        <img src="https://a0.muscache.com/pictures/10272854/8dcca016_original.jpg" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Appartment Name</h5>
-                            <p class="card-text">26/5/2022 - 30/5/2022</p>
-                            <a href="#" class="btn btn-primary">Review</a>
-                        </div>
-                    </div>
-                </div>-->
                 </div>
             </div>
         </div>
