--- a/RupBNB/Pages/signUp.html
+++ b/RupBNB/Pages/signUp.html
@@ -28,7 +28,6 @@
         <div id="MainHeader">
 
         </div>
-
         <div id="formContainer">
             <form id="signUpForm">
                 <div class="mb-3">
@@ -45,7 +44,7 @@
                 <div class="mb-3">
                     <label for="forUserName" class="form-label"> UserName</label>
                     <input type="text" id="userName"
-                           pattern="[A-Za-z]{3,30}"
+                           pattern="[a-zA-Z0-9]{3,30}"
                            oninvalid="this.setCustomValidity('User Name must be Minimun 3 characters - only letters')"
                            oninput="this.setCustomValidity('')"
                            class="form-control"
