Revert "Merge branch 'main' of https://github.com/rupcgroup4/Airbnb"
This reverts commit eaafcb91714c0fc5cd5953d6a7b0d1fd034f4a50, reversing
changes made to 3dd483c1900e34d014ee20d9e8b7a95ef68adf5e.

--- a/RupBNB/Pages/signUp.html
+++ b/RupBNB/Pages/signUp.html
@@ -28,6 +28,7 @@
         <div id="MainHeader">
 
         </div>
+
         <div id="formContainer">
             <form id="signUpForm">
                 <div class="mb-3">
@@ -44,7 +45,7 @@
                 <div class="mb-3">
                     <label for="forUserName" class="form-label"> UserName</label>
                     <input type="text" id="userName"
-                           pattern="[a-zA-Z0-9]{3,30}"
+                           pattern="[A-Za-z]{3,30}"
                            oninvalid="this.setCustomValidity('User Name must be Minimun 3 characters - only letters')"
                            oninput="this.setCustomValidity('')"
                            class="form-control"
