--- a/RupBNB/Pages/invoice.html
+++ b/RupBNB/Pages/invoice.html
@@ -48,7 +48,42 @@
                 </div>
             </div>
             <div class=" col-12 col-md-5">
-                <div id="details" class="row"></div>
+                <div id="details" class="row">
+                    <div class="col">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="check-in">
+                                <div class="d-flex flex-row align-items-center">
+                                    <h1 id="checkInDate">24</h1>
+                                    <div class="d-flex flex-column ml-2 date">
+                                        <span id="checkInMonthAndYear">July 20</span>
+                                        <span id="checkInDay">Friday</span>
+                                    </div>
+                                </div>
+                                <div class="d-flex flex-column ml-2 date">
+                                    <span>Check in</span>
+                                    <span>Anytime after 3PM</span>
+                                </div>
+                            </div>
+
+
+                            <div class="check-out">
+                                <div class="d-flex flex-row align-items-center">
+                                    <h1 id="checkOutDate">25</h1>
+                                    <div class="d-flex flex-column ml-2 date">
+                                        <span id="checkOutMonthAndYear">July 20</span>
+                                        <span id="checkOutDay">Friday</span>
+                                    </div>
+                                </div>
+                                <div class="d-flex flex-column ml-2 date">
+                                    <span>Check out</span>
+                                    <span>11AM</span>
+                                </div>
+
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
                 <div id="host" class="row"></div>
                 <h3 class="mt-1"></h3>
                 <div id="map"></div>
