--- a/RupBNB/Pages/signUp.html
+++ b/RupBNB/Pages/signUp.html
@@ -38,7 +38,9 @@
                     <input type="email" id="email"
                            class="form-control"
                            aria-describedby="emailHelp"
-                           placeholder="Email" required>
+                           placeholder="Email" 
+                           oninput="this.setCustomValidity('')"
+                           required>
                     <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                 </div>
                 <div class="mb-3">
