--- a/RupBNB/Pages/signUp.html
+++ b/RupBNB/Pages/signUp.html
@@ -47,7 +47,7 @@
                     <label for="forUserName" class="form-label"> UserName</label>
                     <input type="text" id="userName"
                            pattern="[a-zA-Z0-9]{3,30}"
-                           oninvalid="this.setCustomValidity('User Name must be Minimun 3 characters - only letters')"
+                           oninvalid="this.setCustomValidity('User Name must be Minimun 3 characters - letters and numbers only')"
                            oninput="this.setCustomValidity('')"
                            class="form-control"
                            placeholder="First Name" required>
